--- a/build.gradle.1
+++ b/build.gradle.1
@@ -36,7 +36,7 @@ subprojects {
 
     apply plugin: "java"
     apply plugin: 'io.spring.dependency-management'
-    apply plugin: "org.springframework.boot"
+//    apply plugin: "org.springframework.boot"
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -128,5 +128,6 @@ subprojects {
         withSourcesJar()
     }
 }
+
 
 
